# hexapod

./: .gitignore  .justfile  README.md  flake.nix
embedded/: Cargo.toml  flake.nix
embedded/src/: main.rs
python_sub/: pyproject.toml
python_sub/src/hello_world/: __init__.py
rp2040-board/: .gitignore  .justfile  Cargo.toml
rp2040-board/src/: main.rs  servos.rs
rust_sub/: Cargo.toml  flake.nix
rust_sub/src/: main.rs
sim_node/: flake.nix  pyproject.toml
sim_node/src/simulation/: __init__.py
