[package]
name = "embedded"
version = "0.1.0"
edition = "2024"

publish = false

[dependencies]
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",           # ← REQUIRED for RP2040 / Cortex-M
    "executor-thread",         # Thread-mode executor (most common, low-power with WFE)
    "defmt",                   # Enable defmt support in executor
] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.9.0", features = [
    "rp2040",              # ← Required for your chip
    "rt",                  # Adds interrupt vectors (usually good to have)
    "time-driver",         # Enables 1 MHz timer for embassy-time
    "critical-section-impl", # Safe multicore critical sections (if using both cores)
    "defmt",               # If you're using defmt logging
] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = "0.5.1"
embassy-usb-logger = "0.5.1"

cortex-m = { version = "0.7.7", default-features = false }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
# display-interface-spi = "0.5.0"
# embedded-graphics = "0.8.1"
# mipidsi = "0.8.0"
# display-interface = "0.5.0"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.4.0"
heapless = "0.8"
usbd-hid = "0.9.0"



embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
embedded-storage = { version = "0.3" }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.9.0", default-features = false }
embedded-sdmmc = "0.7.0"




defmt-rtt = "0.4"      # RTT backend (logs over probe-rs / picoprobe)
defmt = "1.0.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
